Fix contact cards on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -152,6 +152,7 @@
   border-radius: 10px;
   padding: 10px;
   margin-right: 15px;
+  margin-bottom: 15px;
   background-color: var(--background-color);
   filter: drop-shadow(0px 0px 15px #dedfe0);
 }
